fix to broken styles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -275,7 +275,7 @@ a:focus {
     padding: 200px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/picture2.png) no-repeat bottom center scroll;
+    background: url(../img/dev_bootcamp.png) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
